added image gallery might delete later

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 id="home-hero-message">Clay is a global branding and UX design agency</h1>
             <div id="home-hero-video-wrapper" class="fullscreen">
                 <video id="home-hero-video" loop autoplay muted>
-                    <source src="./Assets/Video/creativeagencypromo.mp4" type="video/mp4">
+                    <source src="./Assets/Video/agencypromo.mp4" type="video/mp4">
                 </video>
             </div>
         </section>
@@ -231,6 +231,36 @@
             </div>
         </section>
     </main>
+    <section id="home-about">
+        <div class="about-content">
+            <h2>We transform companies through design innovation</h2>
+            <p>A full-service creative agency designing and building inventive digital experiences across all platforms and brand touchpoints.</p>
+            <button type="button" class="section-button">
+                <p>View our services</p>
+                <img src="./Assets/SVG/arrow-right.svg">
+            </button>
+        </div>
+        <div class="image-gallery">
+            <div class="hover-panel">
+                <div class="left"></div>
+                <div class="right"></div>
+            </div>
+            <div class="scroller-wrapper hide-scroll">
+                <div class="scroller">
+                    <img src="Assets/Images/land 1.jpg" width="700px">
+                    <img src="Assets/Images/port 1.jpg" width="400px">
+                    <img src="Assets/Images/land 2.jpg" width="700px">
+                    <img src="Assets/Images/port 2.jpg" width="400px">
+                    <img src="Assets/Images/land 3.jpg" width="700px">
+                    <img src="Assets/Images/port 3.jpg" width="400px">
+                    <img src="Assets/Images/land 4.jpg" width="700px">
+                    <img src="Assets/Images/port 4.jpg" width="400px">
+                    <img src="Assets/Images/land 5.jpg" width="700px">
+                    <img src="Assets/Images/port 5.jpg" width="400px">
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
     </footer>
     <img src="./Assets/SVG/cursor-hover-hero.svg" id="cursor-hover-hero" class="fade-out">
